# Darwin

./: .gitignore  CMakeLists.txt  Darwin.rc  LICENSE  README.md  build.sh  installer.iss  resources.qrc  run.sh
docs/: architecture.md  class_diagram.md  coding_standards.md  data_flow.md  task_list.md
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h  AudioExporter.cpp  AudioExporter.h
src/commands/: UndoCommands.cpp  UndoCommands.h
src/common/: AudioFileReader.cpp  AudioFileReader.h  BurstAnimationHelper.h  ChordDetector.h  Constants.h  FadeHelper.h  MidiFileParser.h  ThemeManager.cpp  ThemeManager.h
src/controllers/: PlaybackController.cpp  PlaybackController.h
src/models/: Clip.cpp  Clip.h  Note.cpp  Note.h  Project.cpp  Project.h  Track.cpp  Track.h
src/plugins/: VST3PluginInstance.cpp  VST3PluginInstance.h  VST3Scanner.cpp  VST3Scanner.h
src/views/arrangement/: ArrangementGridWidget.cpp  ArrangementGridWidget.h  ArrangementGridWidget_Animation.cpp  ArrangementGridWidget_DragDrop.cpp  ArrangementGridWidget_Input.cpp  ArrangementGridWidget_Painting.cpp  ArrangementView.cpp  ArrangementView.h  ArrangementView_DragDrop.cpp  ArrangementView_Headers.cpp  TimelineWidget.cpp  TimelineWidget.h
src/views/compose/: ComposeView.cpp  ComposeView.h
src/views/mix/: MixView.cpp  MixView.h
src/views/pianoroll/: PianoRollGridWidget.cpp  PianoRollGridWidget.h  PianoRollGridWidget_Input.cpp  PianoRollGridWidget_Painting.cpp  PianoRollView.cpp  PianoRollView.h  VelocityLaneWidget.cpp  VelocityLaneWidget.h
src/views/plugineditor/: PluginEditorWidget.cpp  PluginEditorWidget.h
src/views/source/: PluginLoadOverlay.cpp  ScanSpinnerWidget.cpp  SourceView.cpp  SourceView.h
src/widgets/: BulbRaysOverlay.cpp  BulbRaysOverlay.h  CustomTooltip.cpp  CustomTooltip.h  FaderWidget.cpp  FaderWidget.h  IconButton.h  KnobWidget.cpp  KnobWidget.h  LevelMeterWidget.cpp  LevelMeterWidget.h  MixerChannelWidget.cpp  MixerChannelWidget.h  ProjectLoadDialog.cpp  ProjectLoadDialog.h  SplashWidget.cpp  SplashWidget.h
